--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
   "main": "main/index.js",
+  "name": "electron-poc",
+  "version": "0.0.1",
   "productName": "ElectronTypescriptNext",
   "scripts": {
     "clean": "rimraf dist main renderer/out renderer/.next",
@@ -10,20 +12,27 @@
     "build": "npm run build-renderer && npm run build-electron",
     "pack-app": "npm run build && electron-builder --dir",
     "dist": "npm run build && electron-builder",
+    "dist-electron": "electron-builder",
     "type-check": "tsc"
   },
   "dependencies": {
+    "@signalwire/js": "^3.7.0",
+    "axios": "^0.25.0",
     "electron-is-dev": "^1.1.0",
     "electron-next": "^3.1.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.9",
+    "autoprefixer": "^10.4.2",
     "electron": "^13",
     "electron-builder": "^22.9.1",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
     "next": "latest",
     "postcss": "^8.4.5",
     "rimraf": "^3.0.0",
